--- a/NemoKachi/App.xaml
+++ b/NemoKachi/App.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:NemoKachi"
-    RequestedTheme="Light">
+    >
 
     <Application.Resources>
         <ResourceDictionary>
@@ -15,7 +15,8 @@
                  -->
                 <ResourceDictionary Source="Common/StandardStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-
+            <x:String x:Key="oauth_consumer_key">HeOeHqoUvfzrcRNUM90iPw</x:String>
+            <x:String x:Key="oauth_consumer_secret">nNNdPQEhAbu986vIKnqRfjScwfZzvhVovSUT5iWhavA</x:String>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
