await 가능한 로그인 메소드 적용, 로그인 프로그레스 메시지에 스트링리소스 사용하도록 함

--- a/NemoKachi/LoginVisualizer.xaml
+++ b/NemoKachi/LoginVisualizer.xaml
@@ -18,7 +18,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <TextBlock x:Name="messageBlock" FontSize="20" HorizontalAlignment="Center" />
+            <TextBlock x:Name="messageBlock" FontSize="20" HorizontalAlignment="Center" Text="{Binding Phase, Converter={StaticResource loginphaseStringConverter}}" />
             <!--<StackPanel x:Name="messageStack"  HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" >
                 <StackPanel.Resources>
                     <Style TargetType="TextBlock">
