--- a/NemoKachi/LoginVisualizer.xaml
+++ b/NemoKachi/LoginVisualizer.xaml
@@ -7,6 +7,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     
+    <UserControl.Resources>
+        <local:LoginphaseStringConverter x:Key="loginphaseStringConverter" />
+    </UserControl.Resources>
+    
     <Grid x:Name="LayoutRoot" Grid.RowSpan="2" >
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
