페이즈에서 '이미지 로딩' 페이즈 제거, TweetInput 클래스 생성, 리소스에 클라이언트 컬렉션뷰소스

--- a/NemoKachi/LoginVisualizer.xaml
+++ b/NemoKachi/LoginVisualizer.xaml
@@ -16,8 +16,8 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ProgressRing HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100" Height="100" Margin="50" IsActive="True"  />
-        <Grid Grid.Row="1">
+        <ProgressRing HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100" Height="100"  IsActive="True"  />
+        <Grid Grid.Row="1" Margin="0,50,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
