--- a/NemoKachi/MainPage.xaml
+++ b/NemoKachi/MainPage.xaml
@@ -58,6 +58,8 @@
                     </Style>
                 </TextBlock.Style>
             </TextBlock>
+            <GridView HorizontalAlignment="Left" Width="853" Height="116" ItemsSource="{Binding Source={StaticResource accountsCollection}}"/>
+            <local:TweetInput Width="600" Height="300" />
         </StackPanel>
         
         <VisualStateManager.VisualStateGroups>
