--- a/NemoKachi/LoginVisualizer.xaml
+++ b/NemoKachi/LoginVisualizer.xaml
@@ -11,43 +11,26 @@
         <local:LoginphaseStringConverter x:Key="loginphaseStringConverter" />
     </UserControl.Resources>
     
-    <Grid x:Name="LayoutRoot" Grid.RowSpan="2" >
+    <Grid x:Name="LayoutRoot" Grid.RowSpan="2" Background="#4C808080" >
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ProgressRing HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100" Height="100"  IsActive="True"  />
-        <Grid Grid.Row="1" Margin="0,50,0,0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <TextBlock x:Name="messageBlock" FontSize="20" HorizontalAlignment="Center" Text="{Binding Phase, Converter={StaticResource loginphaseStringConverter}}" />
-            <!--<StackPanel x:Name="messageStack"  HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" >
-                <StackPanel.Resources>
-                    <Style TargetType="TextBlock">
-                        <Setter Property="FontSize" Value="18" />
-                        <Setter Property="HorizontalAlignment" Value="Center" />
-                        <Setter Property="Foreground" Value="Gray" />
-                    </Style>
-                </StackPanel.Resources>
-            </StackPanel>-->
-        </Grid>
-        
-        <Grid x:Name="webviewGrid" Visibility="Collapsed" Grid.RowSpan="2" Background="#4C808080" >
-            <Grid MaxWidth="1024" Margin="200,0,200,0" Background="White" >
-                <Grid MaxHeight="920">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="35" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <TextBlock Text="Twitter Authentication" Style="{StaticResource HeaderTextStyle}" Foreground="Black" Margin="50,0,0,0" />
-                    <TextBlock Grid.Row="1" Text="Please input your Twitter ID and password to authenticate this app for your account." Foreground="Black" FontSize="16" VerticalAlignment="Bottom"  TextWrapping="Wrap" Margin="50,0,0,0" />
-                    <Button Grid.Row="2" Style="{StaticResource RefreshAppBarButtonStyle}" VerticalAlignment="Top" />
-                    <WebView Grid.Row="2" x:Name="webView1" Margin="80,40,80,40" />
-                </Grid>  
-            </Grid>
+        <TextBlock Grid.Row="1" Margin="0,50,0,0" x:Name="messageBlock" FontSize="20" HorizontalAlignment="Center" Text="{Binding Phase, Converter={StaticResource loginphaseStringConverter}}" />
+      
+        <Grid x:Name="webviewGrid" Visibility="Collapsed" Grid.RowSpan="2" MaxWidth="1024" Margin="200,0,200,0" Background="White" >
+            <Grid MaxHeight="920">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="35" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <TextBlock Text="Twitter Authentication" Style="{StaticResource HeaderTextStyle}" Foreground="Black" Margin="50,0,0,0" />
+                <TextBlock Grid.Row="1" Text="Give the authorization mail to your magpie so that it can send it to Twitter!" Foreground="Black" FontSize="16" VerticalAlignment="Bottom"  TextWrapping="Wrap" Margin="50,0,0,0" />
+                <Button Grid.Row="2" Style="{StaticResource RefreshAppBarButtonStyle}" VerticalAlignment="Top" />
+                <WebView Grid.Row="2" x:Name="webView1" Margin="80,40,80,40" />
+            </Grid>  
         </Grid>
     </Grid>
 </UserControl>
