--- a/NemoKachi/App.xaml
+++ b/NemoKachi/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:NemoKachi"
+    xmlns:twitter="using:NemoKachi.TwitterWrapper"
     >
 
     <Application.Resources>
@@ -15,8 +16,6 @@
                  -->
                 <ResourceDictionary Source="Common/StandardStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <x:String x:Key="oauth_consumer_key">HeOeHqoUvfzrcRNUM90iPw</x:String>
-            <x:String x:Key="oauth_consumer_secret">nNNdPQEhAbu986vIKnqRfjScwfZzvhVovSUT5iWhavA</x:String>
             <CollectionViewSource x:Key="accountsCollection"  />
             <Style TargetType="Button" x:Key="IconButtonStyle">
                 <Setter Property="MinWidth" Value="0"/>
