AccountCollector 추가, 계정 ID만 있어도 컨트롤에서 토큰을 불러올 수 있도록 만듦

--- a/NemoKachi/App.xaml
+++ b/NemoKachi/App.xaml
@@ -16,7 +16,7 @@
                  -->
                 <ResourceDictionary Source="Common/StandardStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <CollectionViewSource x:Key="accountsCollection"  />
+            <local:AccountTokenCollector x:Key="AccountCollector" />
             <Style TargetType="Button" x:Key="IconButtonStyle">
                 <Setter Property="MinWidth" Value="0"/>
                 <Setter Property="MinHeight" Value="0"/>
