--- a/NemoKachi/MainPage.xaml
+++ b/NemoKachi/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:NemoKachi"
+    xmlns:localelm="using:NemoKachi.CustomElements"
     xmlns:common="using:NemoKachi.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -38,29 +39,11 @@
             <TextBlock x:Name="pageTitle" Grid.Column="1" Text="{StaticResource AppName}" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
 
-        <StackPanel Grid.Row="1" Margin="120,30,0,0">
-            <TextBlock Text="What's your Twitter account?" Style="{StaticResource BasicTextStyle}"/>
-            <StackPanel Orientation="Horizontal" Margin="0,20,0,20">
-                <TextBox x:Name="nameInput" Width="300" HorizontalAlignment="Left"/>
-                <Button Content="Say &quot;Hello&quot;" Click="TweetIDRecieved"/>
-            </StackPanel>
-            <TextBlock x:Name="greetingOutput" Text="Login..." >
-                <TextBlock.Style>
-                    <Style TargetType="TextBlock">
-                        <Setter Property="Foreground" Value="Skyblue"/>
-                        <Setter Property="FontSize" Value="40"/>
-                        <Setter Property="FontFamily" Value="{StaticResource ContentControlThemeFontFamily}"/>
-                        <Setter Property="TextTrimming" Value="WordEllipsis"/>
-                        <Setter Property="TextWrapping" Value="Wrap"/>
-                        <Setter Property="Typography.StylisticSet20" Value="True"/>
-                        <Setter Property="Typography.DiscretionaryLigatures" Value="True"/>
-                        <Setter Property="Typography.CaseSensitiveForms" Value="True"/>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>
+        <Grid Grid.Row="1">
             <GridView HorizontalAlignment="Left" Width="853" Height="116" ItemsSource="{Binding TokenCollection}" DataContext="{StaticResource AccountCollector}"/>
-            <local:TweetInput Width="600" Height="300" />
-        </StackPanel>
+            <localelm:TweetInput Width="600" Height="300" />
+            <localelm:TimelineColumn Width="300" Height="600" DataContext="{StaticResource tempColumn}" />
+        </Grid>
         
         <VisualStateManager.VisualStateGroups>
 
