--- a/NemoKachi/CustomElements/TimelineColumn.xaml
+++ b/NemoKachi/CustomElements/TimelineColumn.xaml
@@ -17,5 +17,20 @@
         </Grid.RowDefinitions>
         <TextBlock Text="{Binding ColumnTitle}" FontSize="50" FontWeight="Light"/>
         <Button Style="{StaticResource IconButtonStyle}" HorizontalAlignment="Right" Content="&#xE117;" FontSize="40" Click="Button_Click_1"/>
+        
+        <ListView x:Name="TweetListView" Grid.Row="1" ItemsSource="{Binding TweetList}" >
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <TextBlock Text="{Binding Text}" FontSize="18" TextWrapping="Wrap"/>
+                        <TextBlock Grid.Row="1" Text="{Binding CreatedAt}" FontSize="12" TextWrapping="Wrap"/>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </UserControl>
