--- a/NemoKachi/MainPage.xaml
+++ b/NemoKachi/MainPage.xaml
@@ -43,6 +43,10 @@
             <GridView HorizontalAlignment="Left" Width="853" Height="116" ItemsSource="{Binding TokenCollection}" DataContext="{StaticResource AccountCollector}"/>
             <localelm:TweetInput Width="600" Height="300" />
             <localelm:TimelineColumn Width="300" Height="600" DataContext="{StaticResource tempColumn}" />
+            <Grid Width="150" Height="30">
+                <TextBox x:Name="idBox" Margin="0,0,40,0" />
+                <Button HorizontalAlignment="Right" Width="40" VerticalAlignment="Stretch" Click="IdLoad" />
+            </Grid>
         </Grid>
         
         <VisualStateManager.VisualStateGroups>
