--- a/NemoKachi/CustomElements/TimelineColumn.xaml
+++ b/NemoKachi/CustomElements/TimelineColumn.xaml
@@ -19,18 +19,41 @@
         <Button Style="{StaticResource IconButtonStyle}" HorizontalAlignment="Right" Content="&#xE117;" FontSize="40" Click="Button_Click_1"/>
         
         <ListView x:Name="TweetListView" Grid.Row="1" ItemsSource="{Binding TweetList}" >
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListViewItem">
+                                <Grid Background="#FF456CBD" Margin="10,5,10,5">
+                                    <ContentPresenter HorizontalAlignment="Stretch" Margin="5" />
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <TextBlock Text="{Binding Text}" FontSize="18" TextWrapping="Wrap"/>
+                    <StackPanel>
+                        <Grid HorizontalAlignment="Left">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding User.Name}" FontSize="20" TextTrimming="WordEllipsis" Foreground="Yellow" />
+                            <Grid Grid.Column="1" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="2,2" >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="@" FontSize="14" Foreground="#FFDCFFA0" />
+                                <TextBlock Grid.Column="1" Text="{Binding User.ScreenName}" FontSize="14" Foreground="#FFDCFFA0"/>
+                            </Grid>
+                        </Grid>
+                        <TextBlock Text="{Binding Text}" FontSize="16" TextWrapping="Wrap"/>
                         <TextBlock Grid.Row="1" Text="{Binding CreatedAt}" FontSize="12" TextWrapping="Wrap"/>
                         <TextBlock Grid.Row="2" Text="{Binding Id}" FontSize="12" TextWrapping="Wrap"/>
-                    </Grid>
+                    </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
