--- a/NemoKachi/App.xaml
+++ b/NemoKachi/App.xaml
@@ -15,6 +15,7 @@
                     Required by Visual Studio project and item templates
                  -->
                 <ResourceDictionary Source="Common/StandardStyles.xaml"/>
+                <ResourceDictionary Source="AppTokens.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <local:AccountTokenCollector x:Key="AccountCollector" />
             <Style TargetType="Button" x:Key="IconButtonStyle">
