--- a/NemoKachi/MainPage.xaml
+++ b/NemoKachi/MainPage.xaml
@@ -55,7 +55,13 @@
                     <TextBox x:Name="cardBox" Margin="120,0,40,0" />
                     <Button HorizontalAlignment="Right" Width="40" VerticalAlignment="Stretch" Click="GetCardTemporary" />
                 </Grid>
-                
+
+                <Grid Width="270" Height="32" Margin="3">
+                    <TextBlock Text="Username" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,160,0" />
+                    <TextBox x:Name="usernameBox" Margin="120,0,40,0" />
+                    <Button HorizontalAlignment="Right" Width="40" VerticalAlignment="Stretch" Click="UsersShowTemporary" />
+                </Grid>
+
                 <Grid Width="270" Height="32" Margin="3">
                     <TextBlock Text="Show" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,160,0" />
                     <TextBox x:Name="idBox" Margin="120,0,40,0" />
@@ -87,7 +93,7 @@
                 </Grid>
                 
                 <Grid Width="270" Height="32" Margin="3">
-                    <TextBlock Text="Unavorite" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,160,0" />
+                    <TextBlock Text="Unfavorite" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,160,0" />
                     <TextBox x:Name="unfavoriteIdBox" Margin="120,0,40,0" />
                     <Button HorizontalAlignment="Right" Width="40" VerticalAlignment="Stretch" Click="FavoriteDestroyTemporary" />
                 </Grid>
